--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mx-auto">
 <section>
   <h2>Create New Post</h2>
 
@@ -20,7 +20,7 @@
 <div class="row">
   {{#if posts.length}}
   <section>
-    <h2>Your Posts</h2>
+    <h2 >Your Posts</h2>
     <ol>
       {{#each posts as |post|}}
       <div class="mb-3 col-12">
