--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,7 +42,9 @@
     </header>
     <div class="container">
       <div class="row">
+        <div class="mx-auto">
         {{{ body }}}
+        </div>
       </div>
     </div>
     </main>
